--- a/about.html
+++ b/about.html
@@ -118,35 +118,38 @@
     <!-- About Start -->
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="row g-5 align-items-end">
-                <div class="col-lg-3 col-md-5 wow fadeInUp" data-wow-delay="0.1s">
-                    <img class="img-fluid rounded" data-wow-delay="0.1s" src="img/about.jpg">
-                </div>
-                <div class="col-lg-6 col-md-7 wow fadeInUp" data-wow-delay="0.3s">
-                    <h1 class="display-1 text-primary mb-0">25</h1>
-                    <p class="text-primary mb-4">Year of Experience</p>
-                    <h1 class="display-5 mb-4">We Make Your Home Like A Garden</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                    <a class="btn btn-primary py-3 px-4" href="">Explore More</a>
-                </div>
-                <div class="col-lg-3 col-md-12 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="row g-5">
-                        <div class="col-12 col-sm-6 col-lg-12">
-                            <div class="border-start ps-4">
-                                <i class="fa fa-award fa-3x text-primary mb-3"></i>
-                                <h4 class="mb-3">Award Winning</h4>
-                                <span>Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna</span>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-lg-12">
-                            <div class="border-start ps-4">
-                                <i class="fa fa-users fa-3x text-primary mb-3"></i>
-                                <h4 class="mb-3">Dedicated Team</h4>
-                                <span>Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class=" ">
+                <p class="h5">About Us<p>              
+<p>
+MA Business Group is a pioneering force in Ethiopia’s agricultural landscape, dedicated to driving transformation and innovation in the sector. 
+Our mission is to empower smallholder farmers and agro-processors by providing them with the essential tools, resources, and support needed to 
+thrive. We focus on delivering sustainable 
+and effective solutions that enhance productivity, boost yields, and ultimately improve livelihoods across the agricultural value chain.
+</p>
+<p class="h5">Our Vision<p>
+    To be a catalyst for agricultural transformation in Ethiopia, fostering growth, sustainability, and prosperity for farmers and agro-processors across the nation.
+        <p class="h5">Our Mission<p>
+    To address the critical challenges faced by Ethiopian farmers by offering comprehensive services in seed multiplication, mechanization, crop production, and agro-input supply. We strive to build stronger value chains, improve access to high-quality agricultural inputs, and support the adoption of modern farming practices.
+    </p>
+        <p class="h5">Our Divisions<p>
+    <p class="h6">MT Seed Enterprises<p>
+    MT Seed Enterprises is committed to solving the long-standing issue of access to quality seeds in Ethiopia. By collaborating with research institutions and local agricultural offices, we ensure that farmers receive high-quality seeds tailored to their specific needs. Our efforts are aimed at improving crop yields and resilience, making us a trusted partner for both smallholders and large-scale growers.
+    <p class="h6">Mechanization Services Center<p>
+    Our Mechanization Services Center brings modern agricultural machinery to the doorstep of Ethiopian farmers. We offer machinery rental services, operator training, and spare parts supply to reduce labor-intensive practices and enhance productivity. From land preparation to post-harvest processing, we support farmers at every stage of their production journey.
+    <p class="h6">Crop Production Development<p>
+    The Crop Production Development division focuses on cultivating high-value crops both on our own farms and through partnerships with local farmers. We specialize in crops such as sesame, sunflower, and cotton, ensuring they meet the quality standards required by agro-processors. By connecting producers and processors, we help build robust value chains that benefit both domestic and international markets.
+    <p class="h6">Agro-Input Dealer<p>
+    Our Agro-Input Dealer division addresses the challenges of accessing critical agricultural inputs. We source and supply fertilizers, agrochemicals, and seeds to farmers, ensuring they receive what they need when they need it. Our reliable distribution networks and focused support for smallholder farmers help maximize productivity and improve livelihoods.
+    <h7>Our Commitment</h7>
+    At MA Business Group, we are deeply committed to the growth and success of Ethiopia’s agricultural sector. By addressing the core challenges of seed access, mechanization, crop production, and input supply, we are working tirelessly to transform agriculture in Ethiopia. Our goal is to create a more prosperous and sustainable future for all stakeholders in the agricultural value chain.
+    
+<h5>Why Choose Us?</h5>
+<b>Comprehensive Solutions :</b> We offer a wide range of services that address the most pressing needs of Ethiopian farmers and agro-processors.
+<b>Sustainable Practices: </b>Our commitment to sustainability ensures that our solutions not only benefit today’s farmers but also future generations.
+    <b>Expertise and Innovation:</b> With a deep understanding of the agricultural sector and a focus on innovation, we are well-equipped to support Ethiopia’s agricultural growth.
+Community-Centric Approach: We work closely with local communities, ensuring that our efforts have a lasting, positive impact on the livelihoods of farmers across the country.
+Join us on our mission to transform Ethiopia’s agricultural sector and create a brighter, more sustainable future for all.
+             
             </div>
         </div>
     </div>
@@ -177,62 +180,6 @@
         </div>
     </div>
     <!-- Facts End -->
-
-
-    <!-- Team Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-bold text-primary">Our Team</p>
-                <h1 class="display-5 mb-5">Dedicated & Experienced Team Members</h1>
-            </div>
-            <div class="row g-4">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="team-item rounded">
-                        <img class="img-fluid" src="img/team-1.jpg" alt="">
-                        <div class="team-text">
-                            <h4 class="mb-0">Doris Jordan</h4>
-                            <p class="text-primary">Landscape Designer</p>
-                            <div class="team-social d-flex">
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="team-item rounded">
-                        <img class="img-fluid" src="img/team-2.jpg" alt="">
-                        <div class="team-text">
-                            <h4 class="mb-0">Johnny Ramirez</h4>
-                            <p class="text-primary">Garden Designer</p>
-                            <div class="team-social d-flex">
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="team-item rounded">
-                        <img class="img-fluid" src="img/team-3.jpg" alt="">
-                        <div class="team-text">
-                            <h4 class="mb-0">Diana Wagner</h4>
-                            <p class="text-primary">Senior Gardener</p>
-                            <div class="team-social d-flex">
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Team End -->
 
 
     <!-- Footer Start -->
