--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     </ul>
                                 </div>
                                 <div class="col-lg-3 col-md-5">
-                                    <a href="crop-production" class="text-decoration-underline">
+                                    <a href="agro-input" class="text-decoration-underline">
                                         <h5>Agro-Input Dealer</h5>
                                     </a>
                                     <ul class="list-unstyled">
@@ -146,7 +146,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">MT Seed Enterprises</h1>
-                                    <a href="seed-interprise.html" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
+                                    <a href="seed-interprise" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
                         </div>
@@ -162,7 +162,7 @@
                                 <div class="col-lg-7">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">Mechanization Services Center
                                     </h1>
-                                    <a href="mechanization.html" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
+                                    <a href="mechanization" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
                         </div>
@@ -178,7 +178,7 @@
                                 <div class="col-lg-7">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">Crop Production Development
                                     </h1>
-                                    <a href="crop-production.html" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
+                                    <a href="crop-production" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
                         </div>
@@ -186,14 +186,14 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img class="w-100" src="img/agro-dealers.jpeg" alt="Image">
+                    <img class="w-100" src="img/agro-dealers.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">Agro-Input Dealer
                                     </h1>
-                                    <a href="agro-input.html" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
+                                    <a href="agro-input" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
                         </div>
@@ -231,7 +231,7 @@
                             </span>
                             <br>
                             <div class="col-lg-12">
-                                <a href="about.html" class="btn btn-primary py-sm-2 px-sm-3" >Read More </a>
+                                <a href="about" class="btn btn-primary py-sm-2 px-sm-3" >Read More </a>
                             </div>
                         </div>
 
@@ -290,7 +290,7 @@
         <div class="container">
             <div class="row g-5 align-items-end ">
                 <div class="col-lg-3 col-md-5  shadow-sm wow fadeInUp d-flex flex-column align-items-center text-center py-4" data-wow-delay="0.1s">
-                    <img class="img-fluid " src="img/icon/icon-3.png" alt="Icon">
+                    <img class="img-fluid " src="img/icon/seed-distribution.png" alt="Icon">
                     <div style="height:100px">
                         <h4 class="mb-3 mt-4">MT Seed Enterprises</h4>  
                     </div>
@@ -298,10 +298,10 @@
                     <p class="mb-3">
                         Specializes in seed multiplication to tackle the longstanding issue of access to quality seeds for Ethiopian farmers. 
                     </p> </div>
-                    <a class="btn btn-sm btn-outline-primary" href="">Read More</a>
+                    <a class="btn btn-sm btn-outline-primary" href="seed-interprise">Read More</a>
                 </div>
                 <div class="col-lg-3 col-md-5 shadow-sm   wow fadeInUp d-flex flex-column align-items-center text-center py-4" data-wow-delay="0.3s">                    
-                    <img class="img-fluid " src="img/icon/icon-3.png" alt="Icon">
+                    <img class="img-fluid " src="img/icon/mechanization.png" alt="Icon">
                     <div style="height:100px">
                         <h4 class="mb-3 mt-4">Mechanization Service Center</h4>    
                     </div>
@@ -309,11 +309,11 @@
                     <p class="mb-3">
                         Delivers modern agricultural equipment to Ethiopian farmers, aiming to boost productivity and reduce labor through convenient machinery hire services.
                     </p> </div>
-                    <a class="btn btn-sm btn-outline-primary" href="mechanization.html">Read More</a>
+                    <a class="btn btn-sm btn-outline-primary" href="mechanization">Read More</a>
                 </div>
                 
                 <div class="col-lg-3 col-md-5 shadow-sm wow fadeInUp d-flex flex-column align-items-center text-center py-4" data-wow-delay="0.3s">
-                    <img class="img-fluid " src="img/icon/icon-3.png" alt="Icon">
+                    <img class="img-fluid " src="img/icon/crop.png" alt="Icon">
                     <div style="height:100px">
                     <h4 class="mb-3 mt-4">Crop Production Development</h4>
                     </div>
@@ -321,11 +321,11 @@
                         <p class="mb-3">
                             Partners with local farmers to cultivate high-value crops like sesame, sunflower, and cotton, ensuring they meet quality standards for agro-processors. 
                         </p> </div>
-                    <a class="btn btn-sm btn-outline-primary" href="crop-production.html">Read More</a>
+                    <a class="btn btn-sm btn-outline-primary" href="crop-production">Read More</a>
                  </div>
 
                 <div class="col-lg-3 col-md-5 shadow-sm  wow fadeInUp d-flex flex-column align-items-center text-center py-4" data-wow-delay="0.5s">
-                    <img class="img-fluid " src="img/icon/icon-3.png" alt="Icon">
+                    <img class="img-fluid " src="img/icon/fertilizer.png" alt="Icon">
                     <div style="height:100px">
                     <h4 class="mb-3 mt-4">Agro-Input Dealer</h4>
                     </div>
@@ -333,7 +333,7 @@
                         <p class="mb-3">
                             Addresses the challenge of accessing essential agricultural inputs by supplying fertilizers, agrochemicals, and seeds to farmers promptly.
                         </p> </div>
-                    <a class="btn btn-sm btn-outline-primary" href="agro-input.html">Read More</a>
+                    <a class="btn btn-sm btn-outline-primary" href="agro-input">Read More</a>
                     <!-- <div class="row g-5">
                         <div class="col-12 col-sm-6 col-lg-12">
                             <div class="border-start ps-4">
@@ -357,7 +357,7 @@
     <!-- About End -->
 
 
-    <!-- Facts Start -->
+    <!-- Facts Star=
     <div class="container-fluid facts my-5 py-5" data-parallax="scroll" data-image-src="img/carousel-1.jpg">
         <div class="col-9 container py-5">
             <div class="row g-5">
@@ -380,7 +380,7 @@
             </div>
         </div>
     </div>
-    <!-- Facts End -->
+ Facts End -->
 
 
     <!-- Features Start -->
@@ -440,7 +440,6 @@
         </div>
     </div>
     <!-- Features End -->
-
 
     <!-- Blog Start -->
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
@@ -732,11 +731,12 @@
     <div class="container-fluid bg-dark text-light footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h4 class="text-white mb-4">Our Office</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>AddisAbaba, Ethiopia</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>09 11 22 33</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> Fasil Sub-City, Gonder Woreda, BLIP, Amhara Region</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+2519 248 018 18
+                    </p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>mandelatemesgen@gmail.com </p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -744,29 +744,22 @@
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h4 class="text-white mb-4">Divisions</h4>
-                    <a class="btn btn-link" href="">MT Seed Enterprises</a>
-                    <a class="btn btn-link" href="">Crop Production Development</a>
-                    <a class="btn btn-link" href="">Agro-Input Dealer</a>
-                    <a class="btn btn-link" href="">Mechanization Services Center</a>
+                    <a class="btn btn-link" href="seed-interprise">MT Seed Enterprises</a>
+                    <a class="btn btn-link" href="crop-production">Crop Production Development</a>
+                    <a class="btn btn-link" href="agro-input">Agro-Input Dealer</a>
+                    <a class="btn btn-link" href="mechanization">Mechanization Services Center</a>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h4 class="text-white mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Divisions & Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
+                    <a class="btn btn-link" href="about">About Us</a>
+                    <a class="btn btn-link" href="contact">Contact Us</a>
+                    <a class="btn btn-link" href="blog">Blogs</a>
+                    <a class="btn btn-link" href="#">Terms & Condition</a>
+                    <a class="btn btn-link" href="#">Support</a>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                    <div class="position-relative w-100">
-                        <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </div>
