--- a/mechanization.html
+++ b/mechanization.html
@@ -46,11 +46,11 @@
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <span class="fa fa-phone-alt me-2"></span>
-                    <span>+2519 111 2345</span>
+                    <span> +2519 2480 1818</span>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <span class="far fa-envelope me-2"></span>
-                    <span>info@example.com</span>
+                    <span>mandelatemesgen@gmail.com</span>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
@@ -69,68 +69,66 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h3 class="m-0">MA Business Group</h3>
-        </a>
+        <img  width="200px" height="70px" src="img/MA.png" alt="Logo">
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link ">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
+                <a href="/" class="nav-item nav-link ">Home</a>
+                <a href="about" class="nav-item nav-link">About</a>
                 <div class="nav-item dr">
                     <a href="#" class="nav-link active" data-bs-toggle="dropdown">Services</a>
                     <div class="services-box">
                         <div class="services-box bg-light p-4">
                             <div class="row">
-                                <div class="col-lg-3 col-md-5 ">
-                                    <a href"#" class="">
+                                <div class="col-lg-3 col-md-5">
+                                    <a href="seed-interprise" class="text-decoration-underline">
                                         <h5>MT Seed Enterprises</h5>
                                     </a>
                                     <ul class="list-unstyled">
                                         <li>Seed multiplication and distribution</li>
                                         <li>Collaboration with research centers for improved seed varieties.</li>
-                                        <li>Timely delivery to ensure optimal planting windows.
-                                        </li>
+                                        <li>Timely delivery to ensure optimal planting windows.</li>
                                     </ul>
                                 </div>
-                                <div class="col-lg-3 col-md-5 ">
-                                    <h5>Mechanization Services Center
-                                    </h5>
+                                <div class="col-lg-3 col-md-5">
+                                    <a href="mechanization" class="text-decoration-underline">
+                                        <h5>Mechanization Services Center</h5>
+                                    </a>
                                     <ul class="list-unstyled">
                                         <li>Machinery rental for land preparation, planting, and post-harvest processing</li>
-                                        <li>Training programs for machine operators.
-                                        </li>
+                                        <li>Training programs for machine operators.</li>
                                         <li>Spare parts supply and maintenance services.</li>
                                     </ul>
                                 </div>
-                                <div class="col-lg-3 col-md-5 ">
-                                    <h5>Crop Production Development
-                                    </h5>
+                                <div class="col-lg-3 col-md-5">
+                                    <a href="crop-production" class="text-decoration-underline">
+                                        <h5>Crop Production Development</h5>
+                                    </a>
                                     <ul class="list-unstyled">
                                         <li>Crop production on company and farmer-owned land.</li>
-                                        <li>Collaboration with local farmers to improve yields.
-                                        </li>
+                                        <li>Collaboration with local farmers to improve yields.</li>
                                         <li>Sale and distribution to agro-processing industries.</li>
                                     </ul>
                                 </div>
-                                <div class="col-lg-3 col-md-5 ">
-                                    <h5>Agro-Input Dealer</h5>
+                                <div class="col-lg-3 col-md-5">
+                                    <a href="agro-input" class="text-decoration-underline">
+                                        <h5>Agro-Input Dealer</h5>
+                                    </a>
                                     <ul class="list-unstyled">
                                         <li>Outsourcing and supply of fertilizers, agrochemicals, and other critical inputs.</li>
-                                        <li>Reliable distribution networks to ensure timely delivery.
-                                        </li>
-                                        <li>Focused support for smallholder farmers to boost their production capacity.
-                                        </li>
+                                        <li>Reliable distribution networks to ensure timely delivery.</li>
+                                        <li>Focused support for smallholder farmers to boost their production capacity.</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                    <a href="service.html" class="nav-item nav-link">Blog</a>
-                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+                
+                <a href="blog" class="nav-item nav-link">Blog</a>
+                <a href="contact" class="nav-item nav-link">Contact Us</a>
             </div>
         </div>
     </nav>
@@ -353,11 +351,12 @@
     <div class="container-fluid bg-dark text-light footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h4 class="text-white mb-4">Our Office</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>AddisAbaba, Ethiopia</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>09 11 22 33</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> Fasil Sub-City, Gonder Woreda, BLIP, Amhara Region</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+2519 248 018 18
+                    </p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>mandelatemesgen@gmail.com </p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -365,29 +364,22 @@
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h4 class="text-white mb-4">Divisions</h4>
-                    <a class="btn btn-link" href="">MT Seed Enterprises</a>
-                    <a class="btn btn-link" href="">Crop Production Development</a>
-                    <a class="btn btn-link" href="">Agro-Input Dealer</a>
-                    <a class="btn btn-link" href="">Mechanization Services Center</a>
+                    <a class="btn btn-link" href="seed-interprise">MT Seed Enterprises</a>
+                    <a class="btn btn-link" href="crop-production">Crop Production Development</a>
+                    <a class="btn btn-link" href="agro-input">Agro-Input Dealer</a>
+                    <a class="btn btn-link" href="mechanization">Mechanization Services Center</a>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h4 class="text-white mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Divisions & Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
+                    <a class="btn btn-link" href="about">About Us</a>
+                    <a class="btn btn-link" href="contact">Contact Us</a>
+                    <a class="btn btn-link" href="blog">Blogs</a>
+                    <a class="btn btn-link" href="#">Terms & Condition</a>
+                    <a class="btn btn-link" href="#">Support</a>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                    <div class="position-relative w-100">
-                        <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </div>
