--- a/agro-input.html
+++ b/agro-input.html
@@ -257,7 +257,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="service-item rounded d-flex h-100">
                             <div class="service-img rounded">
-                                <img class="img-fluid" src="img/service-1.jpg" alt="">
+                                <img class="img-fluid" src="img/service-1.jpeg" alt="">
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
@@ -274,7 +274,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="service-item rounded d-flex h-100">
                             <div class="service-img rounded">
-                                <img class="img-fluid" src="img/service-2.jpg" alt="">
+                                <img class="img-fluid" src="img/service-2.jpeg" alt="">
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
@@ -291,7 +291,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="service-item rounded d-flex h-100">
                             <div class="service-img rounded">
-                                <img class="img-fluid" src="img/service-3.jpg" alt="">
+                                <img class="img-fluid" src="img/service-3.jpeg" alt="">
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
