--- a/seed-interprise.html
+++ b/seed-interprise.html
@@ -295,7 +295,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="service-item rounded d-flex h-100">
                             <div class="service-img rounded">
-                                <img class="img-fluid" src="img/service-1.jpg" alt="">
+                                <img class="img-fluid" src="img/service-1.jpeg" alt="">
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
@@ -309,7 +309,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="service-item rounded d-flex h-100">
                             <div class="service-img rounded">
-                                <img class="img-fluid" src="img/service-2.jpg" alt="">
+                                <img class="img-fluid" src="img/service-2.jpeg" alt="">
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
@@ -324,7 +324,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="service-item rounded d-flex h-100">
                             <div class="service-img rounded">
-                                <img class="img-fluid" src="img/service-3.jpg" alt="">
+                                <img class="img-fluid" src="img/service-3.jpeg" alt="">
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
